kube_apps/psono/deploy-psono-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psono-client
  namespace: psono
  labels:
    app: psono-client
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: psono-client
  template:
    metadata:
      labels:
        app: psono-client
      annotations:
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.include_tags: "latest"
    spec:
      containers:
        - name: psono-client
          image: psono/psono-client:4.6.2
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              memory: "15Mi"
              cpu: "2m"
            limits:
              memory: "45Mi"
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /usr/share/nginx/html/config.json
              name: psono
              subPath: config.json
      restartPolicy: Always
      volumes:
        - name: psono
          persistentVolumeClaim:
            claimName: pvc-psono-unifi
