kube_apps/psono/deploy-psono.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psono
  namespace: psono
  labels:
    app: psono
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: psono
  template:
    metadata:
      labels:
        app: psono
      annotations:
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.include_tags: "latest"
    spec:
      securityContext:
        sysctls:
          - name: net.core.somaxconn
            value: "65535"
      containers:
        - name: psono-server
          image: psono/psono-server-enterprise:7.2.5
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              memory: "200Mi"
              cpu: "2m"
            limits:
              memory: "1024Mi"
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /root/.psono_server/settings.yaml
              name: psono
              subPath: settings.yaml
            - mountPath: /var/log/psono
              name: psono
              subPath: logs
      restartPolicy: Always
      volumes:
        - name: psono
          persistentVolumeClaim:
            claimName: pvc-psono-unifi
