kube_apps/psono/svc-nginx-proxy-cluster.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-psono-nginx-proxy-cluster
  namespace: psono
  labels:
    app: psono-nginx-proxy
spec:
  selector:
    app: psono-nginx-proxy
  ports:
    #- name: http
    #  protocol: TCP
    #  port: 80
    #  targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
