kube_apps/psono/svc-psono-admin.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-psono-admin
  namespace: psono
  labels:
    app: psono-admin
spec:
  selector:
    app: psono-admin
  ports:
    - name: http
      protocol: TCP
      port: 10102
      targetPort: 80
  type: LoadBalancer
