kube_apps/psono/svc-psono.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-psono
  namespace: psono
  labels:
    app: psono
spec:
  selector:
    app: psono
  ports:
    - name: http
      protocol: TCP
      port: 10100
      targetPort: 80
  type: NodePort
