kube_apps/psono/ingress-psono-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: psono-admin-ingress
  namespace: psono
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: psonoadmin.houseofus.eu
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-psono-admin-cluster
              port:
                number: 10102
