kube_apps/psono/ingresscdr-psono.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: psono-ingresscdr
  namespace: psono

spec:
  entryPoints:
    - websecure

  routes:
  - kind: Rule
    match: Host(`psono.houseofus.eu`)
    services:
    - kind: Service
      name: svc-psono-nginx-proxy-cluster
      port: 443
      namespace: psono
      scheme: https
      serversTransport: psono-transport
      #sticky:
      #  cookie:
      #    name: nc_session_id
  tls:
    certResolver: file
    options:
      name: psono-tls
      namespace: psono
